[package]
name = "uniart"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Myszkier <myszkier.gabriel@gmail.com>"]
description = "A CLI tool to convert images and gifs to terminal characters."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gre-v-el/uniart"
keywords = ["unicode", "ascii", "art", "cli", "terminal"]


[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
ctrlc = "3.4.4"
image = "0.25.1"
termion = "4.0.2"
